# learn-opengl

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: 3DSConverter.cpp.C6FA9B14F2D8C035.idx  3DSExporter.cpp.78986FB04ED20E59.idx  3DSExporter.h.F6623BC821168CBB.idx  3DSHelper.h.F33383CDB34C5EF7.idx  3DSLoader.cpp.6EDE5E3E458D8A5D.idx  3DSLoader.h.EBBA9B1E4DE4CDEC.idx  3MFTypes.h.D25BE48030828452.idx  3MFXmlTags.h.2255F06E91FA4D71.idx  ACLoader.cpp.6D5C1BCC4FF1C901.idx  ACLoader.h.6D1195C13AA86F64.idx  AMFImporter.cpp.944FF8563C869498.idx  AMFImporter.hpp.D4E27A5800323136.idx  AMFImporter_Geometry.cpp.2179ADCEF2CFE8EE.idx  AMFImporter_Material.cpp.B33E3E5C80FED983.idx  AMFImporter_Node.hpp.79817A2A2EF3A0CC.idx  AMFImporter_Postprocess.cpp.47222BB73C976ABD.idx  ASELoader.cpp.47365738C117A472.idx  ASELoader.h.A57EFC6D6A0C14E0.idx  ASEParser.cpp.66AE0074352E6221.idx  ASEParser.h.03FB9A9D712833A1.idx  AbstractImportExportBase.cpp.C19AB11DFA61F55B.idx  AbstractImportExportBase.h.CA8225E846414C31.idx  ArmaturePopulate.cpp.BEFA20BFE9CF07EC.idx  ArmaturePopulate.h.6CA62032CB9A3788.idx  AssbinExporter.cpp.5B607430937EDC60.idx  AssbinFileWriter.cpp.DE621970D0AE5696.idx  AssbinFileWriter.h.1AA57561B42A4468.idx  AssbinLoader.cpp.0254FDA1AEC5A12B.idx  AssbinLoader.h.3B04DA8BEBE4E833.idx  AssertHandler.cpp.F4EF7F8B89FAEE12.idx  AssertHandler.h.F6E160B148E69292.idx  Assimp.cpp.8BBE4DD14CB5F955.idx  AssimpAPITest.cpp.DB024972CBEE4C77.idx  AssimpAPITest_aiMatrix3x3.cpp.D43435F2EE1C1876.idx  AssimpAPITest_aiMatrix4x4.cpp.BB15B99D6F5733DE.idx  AssimpAPITest_aiQuaternion.cpp.F835EB81468AF92F.idx  AssimpAPITest_aiVector2D.cpp.757808FECDEBE8ED.idx  AssimpAPITest_aiVector3D.cpp.D98ED331A3CC1A9B.idx  AssimpCExport.cpp.09A169C7BB1EBF9A.idx  AssxmlExporter.cpp.30BC4B1F9F324D2A.idx  (+1098 more)
src/1.getting_started/1.1.hello_window/: main.cpp
src/1.getting_started/2.1.hello_triangle/: main.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: main.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: main.cpp  texture.vert
src/1.getting_started/3.1.shaders_uniform/: main.cpp  texture.vert
src/1.getting_started/3.2.shaders_interpolation/: main.cpp  texture.vert
src/1.getting_started/4.1.textures/: main.cpp
src/1.getting_started/4.2.textures_combined/: main.cpp  texture.frag
src/1.getting_started/5.1.transformations/: main.cpp  texture.vert
src/1.getting_started/6.1.coordinate_systems/: main.cpp  texture.vert
src/1.getting_started/6.2.coordinate_systems_depth/: main.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: main.cpp
src/1.getting_started/7.1.camera_circle/: main.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: main.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: main.cpp
src/2.lighting/1.colors/: main.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: cube.frag  main.cpp
src/2.lighting/2.2.basic_lighting_specular/: cube.vert  main.cpp
src/2.lighting/2.3.basic_lighting_exercise1/: cube.frag  main.cpp
src/2.lighting/3.1.materials/: main.cpp
src/2.lighting/3.2.materials/: cube.frag  main.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: cube.frag  cube.vert  main.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: cube.frag  main.cpp
src/2.lighting/5.1.light_casters_directional/: cube.frag  main.cpp
src/2.lighting/5.2.light_casters_point/: cube.frag  main.cpp
src/2.lighting/5.3.light_casters_spot/: cube.frag  main.cpp
src/2.lighting/5.4.light_casters_spot_soft/: cube.frag  main.cpp
src/2.lighting/6.multiple_lights/: cube.frag  cube.vert  main.cpp
src/3.model_loading/1.model_loading/: main.cpp  texture.frag  texture.vert
src/4.advanced_opengl/1.2depth_testing_depth_buffer/: main.cpp  texture.frag
src/4.advanced_opengl/1.3depth_testing_stencil/: main.cpp
src/4.advanced_opengl/10.1.instancing_quads/: main.cpp  quad.vert
src/4.advanced_opengl/10.2.asteroids/: asteroid.frag  asteroid.vert  main.cpp  planet.vert
src/4.advanced_opengl/3.1.blending_discard/: main.cpp  outline.frag  texture.frag
src/4.advanced_opengl/3.2.blending_sort/: main.cpp
src/4.advanced_opengl/4.1.face_culling/: main.cpp
src/4.advanced_opengl/5.1.framebuffers/: quad.frag
src/4.advanced_opengl/5.2.framebuffers_kernel/: quad.frag
src/4.advanced_opengl/5.3.framebuffers_kernel_blur/: quad.frag  texture.frag
src/4.advanced_opengl/5.4.framebuffers_kernel_edge/: main.cpp  quad.frag
src/4.advanced_opengl/6.1.cubemaps_skybox/: cubemaps.frag  cubemaps.vert  main.cpp  skybox.frag  skybox.vert
src/4.advanced_opengl/6.2.cubemaps_environment_mapping/: cubemaps.frag
src/4.advanced_opengl/6.3.cubemaps_environment_mapping_refraction/: cubemaps.frag  cubemaps.vert  main.cpp  quad.vert
src/4.advanced_opengl/8.advanced_glsl_ubo/: cube.vert  main.cpp
src/4.advanced_opengl/9.1.geometry_shader_line/: main.cpp  shader.frag  shader.geom  shader.vert
src/4.advanced_opengl/9.2.geometry_shader_house/: main.cpp  shader.frag  shader.geom  shader.vert
src/4.advanced_opengl/9.3.geometry_shader_exploding/: main.cpp  shader.vert
src/4.advanced_opengl/9.4.geometry_shader_normals/: main.cpp  normal.geom  normal.vert  shader.frag  shader.geom  shader.vert
src/8.2d_game/breakout/: main.cpp  particle.frag  particle.vert  post_processor.frag  post_processor.vert  sprite.frag  sprite.vert
